# mental_health_agent

./: .gitignore  README.md  agent_core.py  pyproject.toml
app/: streamlit_app.py
graphs/: langchains.py  mh_graph.py  pretty_logging.py  prompts.py  shared_config.py  types.py  utils.py
scripts/: 01_build_index.py  02_run_chat_cli.py  02_similarity_search.py  03_run_chat_cli.py
shell/: start_postgre16.sh
