[project]
name = "mental-health-agent"
version = "0.1.0"
description = "A RAG-based mental-health assistant using LangChain, LangGraph and Streamlit"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "cryptography>=45.0.5",
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "langchain-pinecone>=0.2.9",
    "langgraph>=0.5.1",
    "mlflow>=3.1.1",
    "openai>=1.93.1",
    "pinecone>=7.3.0",
    "pypdf>=5.8.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.47.1",
    "unstructured>=0.18.11",
]

[project.optional-dependencies]
dev = [
  "ruff", "black", "pytest", "pytest-asyncio",
  "ipykernel", "pre-commit"
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B"]


